Fix overflowing text in buttons above the graph
Also made everything centrally aligned.

Testing:
- Wide screen: https://screenshot.googleplex.com/7WmdeNu4EB7y5Dq
- Laptop size: https://screenshot.googleplex.com/AHbcA7s7b2Es5gp
- Shorter screen: https://screenshot.googleplex.com/9pT8QeA4eb7ettR

Demo screencast: https://screencast.googleplex.com/cast/NDk1ODQ4ODg1MjY5Mjk5Mnw4ZjJjN2Q0Ny1hNA

Bug: b/356330305
Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/892069
Commit-Queue: Vidit Chitkara <viditchitkara@google.com>

--- a/perf/modules/explore-simple-sk/explore-simple-sk.scss
+++ b/perf/modules/explore-simple-sk/explore-simple-sk.scss
@@ -136,10 +136,19 @@ explore-simple-sk {
     button,
     checkbox-sk {
       margin: 0;
+      height: auto;
+      min-height: 40px;
     }
 
     [hidden] {
       display: none;
+    }
+  }
+
+  #traceButtons {
+    checkbox-sk {
+      display: flex;
+      align-items: center;
     }
   }
 
